# sudoku_solver

./: .gitignore  README.md  conanfile.txt  gen.sh  main.cc  meson.build
src/: myint.h  sudoku.cc  sudoku.h
tests/: col.txt  easy.txt  medium.txt  row.txt  solved.txt  sqr.txt  test_main.cc  test_simple.cc
